Refactor: ListValidator 제네릭 타입 매개변수 사용